# computer_vision

./: .gitignore  CMakeLists.txt  README.md  main.cpp  simple_image.cpp
include/: histogram_img.hpp
src/: CMakeLists.txt
src/lib/: CmakeLists.txt
src/lib/histogram_img/: CMakeLists.txt  histogram_img.cpp
